@@ -6,7 +6,7 @@
 ## Author:  Yoshinari Nomura <nom@quickhack.net>
 ##
 ## Created: 1999/11/11
-## Revised: $Date: 2000/09/25 02:23:12 $
+## Revised: $Date: 2000/12/20 12:08:36 $
 ##
 ## today was originally written in perl.
 ## This  is a ruby version of it. Original authors were
@@ -460,12 +460,12 @@ def
 } def
 
 /startday {				% starting day-of-week for this month
-	/off year 2000 sub def		% offset from start of "epoch"
+	/off year 2032 sub def		% offset from start of "epoch"
 	off
 	off 4 idiv add			% number of leap years
 	off 100 idiv sub		% number of centuries
 	off 1000 idiv add		% number of millenia
-	6 add weekday days_week add 	% offset from Jan 1 2000
+	4 add weekday days_week add 	% offset from Jan 1 2032
 	/off exch def
 	1 1 month 1 sub {
 		/idx exch def
