@@ -3,6 +3,8 @@
 	* emacs/mhc-ps.el (mhc-ps/string): Calculate '/startday' from
 	"1/1/2032" instead of "1/1/2000".
 
+	* today.in: Ditto.
+
 2000-12-19  Kazuhiro NISHIYAMA <zn@mbf.nifty.com> / nom@quickhack.net
 
 	* mhc-make.rb: filter -> collect.
